--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         0923-216-123
     </h4>
     <div class="buttons" >
-      <a class="btn fill" href="" target="_blank">作品集</a>
+      <a class="btn fill" href="https://github.com/HelloKarla?tab=repositories" target="_blank">作品集</a>
       <a class="btn" href="https://github.com/HelloKarla" target="_blank">GitHub</a>
     </div>
     <div class="block">
