--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 </head>
 <body>
     <div class="resume">
-  <div class="left">
-    <h1>陳怡璇</h1>
-    <h4>淡江大學公共行政學系｜四年級</h4>
-    <hr>
-    <p>自我介紹</p>
-    <h4 class="info">1995/12/17
+      <div class="left">
+        <img src="./img/IMG_3755.JPG" class="profile img-circle">
+        <h1>陳怡璇</h1>
+        <h3>Chen Yi Hsuan</h4>
+        <h4>淡江大學公共行政學系｜四年級</h4>
+        <hr>
+        <p>自我介紹</p>
+        <h4 class="info">1995/12/17
         <br>
         0923-216-123
-    </h4>
+        </h4>
     <div class="buttons" >
       <a class="btn fill" href="https://codepen.io/KarenCodeDesign/" target="_blank">作品集</a>
       <a class="btn" href="https://github.com/HelloKarla?tab=repositories" target="_blank">GitHub</a>
@@ -92,7 +94,7 @@
     </div>
   </div>
   <div class="right">
-    <div class="decoration"><img src="./img/profile.png" class="profile"></div>
+    <div class="decoration"></div>
     <div class="block">
       <h4>Studies</h4>
       <h2>求學經歷</h2>
@@ -135,6 +137,8 @@
         </li>  
       </ul>
     </div>
+    <div class="decoration2"></div>
+    <div class="decoration3"></div>
   </div>
 </div>
 </body>
