--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="resume">
       <div class="left">
-        <img src="./img/IMG_3755.JPG" class="profile img-circle">
+        <img src="./img/IMG_3755.png" class="profile img-circle">
         <h1>陳怡璇</h1>
         <h3>Chen Yi Hsuan</h4>
         <h4>淡江大學公共行政學系｜四年級</h4>
