--- a/index.html
+++ b/index.html
@@ -11,20 +11,15 @@
 <body>
     <div class="resume">
       <div class="left">
-        <img src="./img/IMG_3755.png" class="profile img-circle">
         <h1>陳怡璇</h1>
         <h3>Chen Yi Hsuan</h4>
         <h4>淡江大學公共行政學系｜四年級</h4>
         <hr>
-        <p>自我介紹</p>
-        <h4 class="info">1995/12/17
-        <br>
-        0923-216-123
-        </h4>
-    <div class="buttons" >
-      <a class="btn fill" href="https://codepen.io/KarenCodeDesign/" target="_blank">作品集</a>
-      <a class="btn" href="https://github.com/HelloKarla?tab=repositories" target="_blank">GitHub</a>
-    </div>
+        <!-- <br> -->
+        <!-- <div class="buttons" >
+          <a class="btn fill" href="https://codepen.io/KarenCodeDesign/" target="_blank">作品集</a>
+          <a class="btn" href="https://github.com/HelloKarla?tab=repositories" target="_blank">GitHub</a>
+        </div> -->
     <div class="block">
       <h4>Skills</h4>
       <h2>專業技能</h2>
@@ -69,7 +64,7 @@
         <li>
           Bootstrap
           <div class="bar">
-            <div class="value p60"></div>
+            <div class="value p80"></div>
           </div>
         </li>
         <li>
@@ -92,19 +87,51 @@
         </li>
       </ul>
     </div>
+    <div class="block">
+          <h4>Studies</h4>
+          <h2>求學經歷</h2>
+          <ul>
+            <li>在大一大二時曾參加系學會籌辦許多活動，擔任舞蹈研習社公關一職，負責接洽社團商演、聯絡學長姊及與其他社團建立友善的情感等等，
+                在系學會及社團內讓我學習到與人溝通、合作、協調並意識到團隊合作得重要性。大三兩學期都超修學分並且all pass，系內的學分幾乎都修完了，
+                到了大四就開始思考未來該做什麼，就在朋友的帶領下認識了「程式」這個和我大學所學相當不同的世界，我們開始在網路上找各種自學資源，
+                在udemy及hahow都有買相關課程，並且參加學校舉辦的相關研習課程及各種講座跟聚會，漸漸的對這領域產生了很大的興趣。</li>
+          </ul>
+        </div>
   </div>
   <div class="right">
+    <img src="./img/IMG_3755.png" class="profile img-circle">
     <div class="decoration"></div>
     <div class="block">
-      <h4>Studies</h4>
-      <h2>求學經歷</h2>
-      <ul>
-        <li>在大一大二時曾參加系學會籌辦許多活動，擔任舞蹈研習社公關一職，負責接洽社團商演、聯絡學長姊及與其他社團建立友善的情感等等，
-            在系學會及社團內讓我學習到與人溝通、合作、協調並意識到團隊合作得重要性。大三兩學期都超修學分並且all pass，系內的學分幾乎都修完了，
-            到了大四就開始思考未來該做什麼，就在男友的帶領下認識了「程式」這個和我大學所學相當不同的世界，我們開始在網路上找各種自學資源，
-            在udemy及hahow都有買相關課程，並且參加學校舉辦的相關研習課程及各種講座跟聚會，漸漸的對這領域產生了很大的興趣。</li>
-      </ul>
-    </div>
+      <h4>Portfolios</h4>
+      <h2>作品集</h2>
+      <ul class="listPortfolio">
+        <li class="madebyscratch">Scratch
+          <ul>
+            <li><a class="potfoliohref"href="https://scratch.mit.edu/projects/200584455/" target="_blank">RPG對打小遊戲</a></li>
+          </ul>
+        </li>
+        <li class="madebygithub">Github  
+          <ul>
+            <li><a class="potfoliohref"href="https://github.com/HelloKarla/shopping_web" target="_blank">購物網站(以貓咪為商品)</a></li>
+            <li><a class="potfoliohref"href="https://github.com/HelloKarla/myFirstWeb" target="_blank">美食部落格(Bootstrap)</a></li>
+            <li><a class="potfoliohref"href="https://github.com/HelloKarla/couple_resume" target="_blank">聯合履歷</a></li>
+            <li><a class="potfoliohref"href="https://github.com/HelloKarla/maipple" target="_blank">服飾網站(仿照Maipple)</a></li>
+          </ul>
+        </li>
+        <li class="madebycodepen">CodePen
+          <ul>
+            <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/QOeaXy" target="_blank">Square Monster</a></li>
+            <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/dZvENo" target="_blank">Where is my cake?</a></li>
+            <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/jaBVLv" target="_blank">閱樂書店書籤</a></li>
+            <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/KZPMdQ" target="_blank">飛鏢遊戲</a></li>
+            <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/JONRMB" target="_blank">簡單動畫</a></li>
+            <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/RjVpov" target="_blank">愛心動畫</a></li>
+            <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/NwjjGj" target="_blank">愛琴海卡片動畫</a></li>
+            <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/NXWrQY" target="_blank">摩斯密碼編譯器</a></li>
+            <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/RxgpaN" target="_blank">意見回覆表單</a></li>
+            <li><a class="potfoliohref"href="https://codepen.io/KarenCodeDesign/pen/YYGjRV" target="_blank">貓咪褓母網頁(仿照Rover)</a></li>
+          </ul>
+        </li>
     <div class="block">
       <h4>Experience / Works</h4>
       <h2>工作經歷</h2>
