--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Resume</title>
     <link rel="stylesheet" type="" href="./index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel">
