--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ p{
 }
 h1{
   opacity: 0.8;
+  font-size: 30px;
 }
 
 h2{
@@ -41,6 +42,7 @@ h2{
   margin-bottom: 25px;
   font-weight: 400;
   opacity:0.8;
+  font-size: 25px;
 }
 h2::after{
   content: "";
@@ -53,12 +55,14 @@ h2::after{
 h3{
   opacity:0.8;
   font-weight: 400;
+  font-size: 20px;
 }
 h4{
   margin: 0;
   margin-top: 40px;
   opacity:0.8;
   font-weight: 400;
+  font-size: 18px;
 }
 .info{
     margin-top: 0px;
@@ -180,6 +184,8 @@ hr{
 .listSkill{
   display: flex;
   flex-wrap: wrap;
+  opacity: 0.8;
+  font-weight: 400;
 }
 .listSkill li{
   display:flex;
@@ -260,6 +266,9 @@ hr{
 .value.p10{
   width: 10%;
 }
+.value.p20{
+  width: 20%;
+}
 .value.p40{
   width: 40%;
 }
@@ -322,7 +331,7 @@ hr{
     <div class="resume">
       <div class="left">
         <h1>陳怡璇</h1>
-        <h3>Chen Yi Hsuan</h4>
+        <h2>Chen Yi Hsuan</h2>
         <h4>淡江大學公共行政學系｜四年級</h4>
         <hr>
         <!-- <br> -->
@@ -395,16 +404,22 @@ hr{
             <div class="value p40"></div>
           </div>
         </li>
+        <li>
+          Vue.js
+          <div class="bar">
+            <div class="value p20"></div>
+          </div>
+        </li>
       </ul>
     </div>
     <div class="block">
           <h4>Studies</h4>
           <h2>求學經歷</h2>
           <ul>
-            <li>在大一大二時曾參加系學會籌辦許多活動，擔任舞蹈研習社公關一職，負責接洽社團商演、聯絡學長姊及與其他社團建立友善的情感等等，
+            <li>在大一大二時曾參加系學會籌辦許多活動，並在舞蹈研習社擔任公關一職，負責接洽社團商演、聯絡學長姊及與其他社團建立友善的情感等等，
                 在系學會及社團內讓我學習到與人溝通、合作、協調並意識到團隊合作得重要性。大三兩學期都超修學分並且all pass，系內的學分幾乎都修完了，
-                到了大四就開始思考未來該做什麼，就在朋友的帶領下認識了「程式」這個和我大學所學相當不同的世界，我們開始在網路上找各種自學資源，
-                在udemy及hahow都有買相關課程，並且參加學校舉辦的相關研習課程及各種講座跟聚會，漸漸的對這領域產生了很大的興趣。</li>
+                到了大四開始思考未來該做什麼，在朋友的帶領下認識了「程式」這個和我大學所學相當不同的世界，之後便開始在網路上找各種自學資源，
+                在udemy、hahow、codecademy都有買相關課程，並且參加學校舉辦的相關研習課程及各種講座跟聚會，漸漸的對這領域產生了很大的興趣。</li>
           </ul>
         </div>
   </div>
