--- a/index.html
+++ b/index.html
@@ -325,6 +325,9 @@ hr{
 .madebygithub{
   letter-spacing: 4.8px;
 }
+.buttons .btn{
+  color: rgba(51, 51, 51,0.9);
+}
     </style>
 </head>
 <body>
@@ -488,6 +491,14 @@ hr{
           </ul>
         </li>  
       </ul>
+      <div class="block">
+        <h4>More About Me</h4>
+        <h2>連結</h2>
+        <div class="buttons">
+          <a class="btn fill" href="https://codepen.io/KarenCodeDesign/" target="_blank">作品集</a>
+          <a class="btn" href="https://github.com/HelloKarla?tab=repositories" target="_blank">GitHub</a>
+        </div>
+      </div>
     </div>
     <div class="decoration2"></div>
     <div class="decoration3"></div>
