--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/path/to/modal-video.min.css">
+    <link rel="stylesheet" href="./index.sass">
     <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="/path/to/modal-video.js"></script>
 
@@ -87,14 +88,15 @@ hr{
   padding: 50px;
   position: relative;
   overflow: hidden;
+  margin: 0 auto;
 }
 .left{
-  flex:5;
+  flex: 5;
   border-right:solid 1px #fca4a4;
   background-color: #8bc9b2
 }
 .right{
-  flex:7;
+  flex: 6;
   background-color: #d6dbdb;
 }
 .left,.right{
@@ -328,6 +330,73 @@ hr{
 .buttons .btn{
   color: rgba(51, 51, 51,0.9);
 }
+
+.monster{
+  width: 50px;
+  height: 50px;
+  background-color: #fc7676;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  transition:  0.5s;
+  animation: jumping 0.8s infinite alternate;
+  box-shadow: 0px 10px 20px rgba(0,0,0,0.2);
+  cursor: pointer;
+  margin: 10px;
+  position: relative;
+}
+.eye{
+    width: 40%;
+    height: 40%;
+    border-radius: 50%;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+    
+.monster .eyeball{
+    width: 50%;
+    height: 50%;
+    border-radius: 50%;
+    background-color: #053a26;
+    animation: eyemove 1.6s infinite alternate 
+}
+.mouth{
+    width: 40%;
+    height: 6px; 
+    background-color: #fff;
+    border-radius: 12px;
+    margin-top: 15%;
+}
+.blue{
+    background-color: #0C4475;
+    animation: jumping 0.8s infinite alternate;
+}
+    
+.blue .mouth,.eyeball{
+    background-color: #E55A54;
+}
+@keyframes jumping{
+    50%{
+        top: 0;
+        box-shadow: 0px 10px 20px rgba(0,0,0,0.1);
+    }
+    100%{
+        top: -50px;
+        box-shadow: 0px 120px 50px rgba(0,0,0,0.1);
+    } 
+}  
+@keyframes eyemove{
+    0%,10%{
+        transform: translate(50%);
+    }
+    90%,100%{
+        transform: translate(-50%);
+    }
+}
     </style>
 </head>
 <body>
@@ -337,12 +406,25 @@ hr{
         <h2>Chen Yi Hsuan</h2>
         <h4>淡江大學公共行政學系｜四年級</h4>
         <hr>
+        <div class="block">
+          <h4>About</h4>
+          <h2>自我介紹</h2>
+          <ul>
+            <li>
+              在朋友的帶領下認識了「程式」這個和我大學所學相當不同的世界，之後便開始在網路上找各種自學資源， 在udemy、hahow、codecademy都有買相關課程，並且參加學校舉辦的相關研習課程及各種講座跟聚會，漸漸的對這領域產生了很大的興趣。<br>
+              我很注重細節，願意為了提升使用者的瀏覽體驗而多花時間與心力。<br>
+              喜歡嘗試新興技術，所學不只侷限於目前所熟悉的知識。<br>
+              善於團隊合作，能夠快速融入團隊氣氛，並一起為目標努力。<br>
+              喜歡當問題解決者，不喜歡當問題製造者。
+            </li>
+          </ul>
+        </div>
         <!-- <br> -->
         <!-- <div class="buttons" >
           <a class="btn fill" href="https://codepen.io/KarenCodeDesign/" target="_blank">作品集</a>
           <a class="btn" href="https://github.com/HelloKarla?tab=repositories" target="_blank">GitHub</a>
         </div> -->
-    <div class="block">
+    <!-- <div class="block">
       <h4>Skills</h4>
       <h2>專業技能</h2>
       <ul class="listSkill">
@@ -366,7 +448,7 @@ hr{
           靜態網頁
         </li>
       </ul>
-    </div>
+    </div> -->
     <div class="block">
       <h4>Programing Skills</h4>
       <h2>程式技能</h2>
@@ -413,23 +495,24 @@ hr{
             <div class="value p20"></div>
           </div>
         </li>
+        <li>
+        1.了解HTML語意及了解CSS的動畫語意並且能將其活用在網頁排版及呈現動畫效果。<br>
+        2.對原生Javascript有基礎概念，目前常用jQuery練習做網頁動畫效果。<br>
+        3.能不倚賴framework進行客製化網頁設計，但也熟悉bootstrap可以利用此framework做網頁開發。<br>
+        4.了解vue.js基礎概念，並能串接第三方api資料。</li>
       </ul>
     </div>
-    <div class="block">
-          <h4>Studies</h4>
-          <h2>求學經歷</h2>
-          <ul>
-            <li>在大一大二時曾參加系學會籌辦許多活動，並在舞蹈研習社擔任公關一職，負責接洽社團商演、聯絡學長姊及與其他社團建立友善的情感等等，
-                在系學會及社團內讓我學習到與人溝通、合作、協調並意識到團隊合作得重要性。大三兩學期都超修學分並且all pass，系內的學分幾乎都修完了，
-                到了大四開始思考未來該做什麼，在朋友的帶領下認識了「程式」這個和我大學所學相當不同的世界，之後便開始在網路上找各種自學資源，
-                在udemy、hahow、codecademy都有買相關課程，並且參加學校舉辦的相關研習課程及各種講座跟聚會，漸漸的對這領域產生了很大的興趣。</li>
-          </ul>
-        </div>
   </div>
   <div class="right">
     <img src="./access/IMG_3755.png" class="profile img-circle">
     <div class="decoration"></div>
     <div class="block">
+      <div class="monster blue">
+        <div class="eye">
+          <div class="eyeball"></div>
+        </div>
+        <div class="mouth"></div>
+      </div>
       <h4>Portfolios</h4>
       <h2>作品集</h2>
       <ul class="listPortfolio">
@@ -501,8 +584,16 @@ hr{
       </div>
     </div>
     <div class="decoration2"></div>
-    <div class="decoration3"></div>
+    <div class="decoration3">
+      <div class="monster">
+        <div class="eye">
+          <div class="eyeball"></div>
+        </div>
+        <div class="mouth"></div>
+      </div>
+    </div>
   </div>
+</div>
 </div>
 </body>
 </html>
